# kuramoto

./: .gitignore  CMakeLists.txt  Makefile  README.md  calc_crit_k.py  common.py  crit_k.py  forcing_scan.py  gen_plots.py  gen_preset.py  kuramoto_simulation.cpp  preset.py
msvc/: kuramoto_simulation.sln  kuramoto_simulation.vcxproj  kuramoto_simulation.vcxproj.filters
